--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@ai-sdk/openai": "^1.3.20",
     "ai": "^4.3.10",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "zod": "^3.24.3"
   }
 }
