--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "dependencies": {
     "@ai-sdk/anthropic": "^1.2.10",
     "@ai-sdk/openai": "^1.3.20",
+    "@supabase/supabase-js": "^2.57.2",
     "ai": "^4.3.10",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
