--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,17 +10,21 @@ actix-web = "4.9.0"
 actix-web-prom = "0.8.0"
 awc = { version = "3.5.1", features = ["openssl"] }
 bytes = "1.8.0"
+dotenv = "0.15.0"
 env_logger = "0.11.5"
 futures = "0.3.31"
 futures-util = "0.3.30"
+lazy_static = "1.4.0"
 libc = "0.2"
 log = "0.4.22"
 openssl = { version = "0.10.68", features = ["vendored"] }
 openssl-probe = "0.1.5"
+reqwest = { version = "0.12.23", features = ["json", "stream"] }
 serde = { version = "1.0.213", features = ["derive"] }
 serde_json = "1.0.132"
 symspell = "0.4.3"
 tokio = { version = "1.40.0", features = ["full"] }
+tokio-stream = "0.1.17"
 uuid = { version = "1.10.0", features = ["v4"] }
 
 [build-dependencies]
